# py-sysutils-admin

./: README.md  py-sysutils-admin.py  pyproject.toml
.github/workflows/: test.yml
docs/superpowers/plans/: 2026-07-13-pysysutils-modernization.md
docs/superpowers/specs/: 2026-07-13-pysysutils-modernization-design.md
src/pysysutils/: __main__.py  cli.py  health.py  models.py  snapshot.py
src/pysysutils/collectors/: __init__.py  battery_status.py  cpu.py  disk.py  memory.py  network.py  processes.py
src/pysysutils/collectors/battery_health/: __init__.py  base.py  darwin.py  linux.py  windows.py
src/pysysutils/formatters/: json_fmt.py  table.py
tests/: test_battery_health.py  test_battery_status.py  test_cli.py  test_cpu.py  test_disk.py  test_formatters.py  test_health.py  test_memory.py  test_models.py  test_network.py  test_processes.py
