[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pysysutils"
version = "0.1.0"
description = "Cross-platform machine health monitor"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "psutil>=5.9.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.0",
]

[project.scripts]
pysysutils = "pysysutils.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
